TestNG Reports ready for Jenkins

--- a/pom.xml
+++ b/pom.xml
@@ -83,13 +83,13 @@
                 <configuration>
 
                     <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <suiteXmlFile>_Parallel_Testing.xml</suiteXmlFile>
                     </suiteXmlFiles>
 
-                    <includes>
-                        <!-- for  run class or classes  **/:bulunduğu lokasyonu bütün klasörlere göre bulabiliyor   -->
-                        <include>**/_04_TestRunnerSmoke.java</include>
-                    </includes>
+<!--                    <includes>-->
+<!--                        &lt;!&ndash; for  run class or classes  **/:bulunduğu lokasyonu bütün klasörlere göre bulabiliyor   &ndash;&gt;-->
+<!--                        <include>**/_04_TestRunnerSmoke.java</include>-->
+<!--                    </includes>-->
 
 
 
