--- a/pom.xml
+++ b/pom.xml
@@ -82,14 +82,14 @@
                 <version>3.0.0-M1</version>
                 <configuration>
 
-                    <suiteXmlFiles>
-                        <suiteXmlFile>_Parallel_Testing.xml</suiteXmlFile>
-                    </suiteXmlFiles>
+<!--                    <suiteXmlFiles>-->
+<!--                        <suiteXmlFile>_Parallel_Testing.xml</suiteXmlFile>-->
+<!--                    </suiteXmlFiles>-->
 
-<!--                    <includes>-->
-<!--                        &lt;!&ndash; for  run class or classes  **/:bulunduğu lokasyonu bütün klasörlere göre bulabiliyor   &ndash;&gt;-->
-<!--                        <include>**/_04_TestRunnerSmoke.java</include>-->
-<!--                    </includes>-->
+                    <includes>
+                        <!-- for  run class or classes  **/:bulunduğu lokasyonu bütün klasörlere göre bulabiliyor   -->
+                        <include>**/_04_TestRunnerSmoke.java</include>
+                    </includes>
 
 
 
